--- a/src/index.html
+++ b/src/index.html
@@ -14,11 +14,7 @@
         <script src="node_modules/systemjs/dist/system.src.js"></script>
 
         <script src="systemjs.config.js"></script>
-        <script>
-            System.import('main.js').catch(function(err){
-                console.error(err);
-            });
-        </script>
+        <script src="script.js"></script>
     </head>
 
     <body>
