--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
         <script src="node_modules/systemjs/dist/system.src.js"></script>
 
         <script src="systemjs.config.js"></script>
+        <script src="aldo.conf.js"></script>
         <script src="script.js"></script>
     </head>
 
