--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
         <script src='script.js'></script>
     </head>
     <body>
+        <div id="preloader"></div>
         <app>
             <div id='preload_spinner' class='hidden'>
                 <em>Loading...</em>
