--- a/src/index.html
+++ b/src/index.html
@@ -20,9 +20,7 @@
     <body>
         <div id="preloader"></div>
         <app>
-            <div id='preload_spinner' class='hidden'>
-                <em>Loading...</em>
-            </div>
+            <div id='preload_spinner' class='hidden spinner'></div>
             <div id='preload_content'>
                 <h1>Fast geschafft! :)</h1>
                 <div id='login_notice'>
