--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,11 @@
         <base href='/'>
         <meta charset='UTF-8'>
         <meta name='viewport' content='width=device-width, initial-scale=1'>
+
+        <!-- Essential for the user to see at least a loading screen -->
+        <link rel='stylesheet' href='style.css'>
+
+        <!-- Big stylesheet with all other styles -->
         <link rel='stylesheet' href='dist/styles.css'>
 
         <!-- Polyfill(s) for older browsers -->
