--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
 
         <script src='systemjs.config.js'></script>
         <script src='aldo.conf.js'></script>
-        <script src='script.js'></script>
+        <script src='script.js' async></script>
     </head>
     <body>
         <div id="preloader"></div>
