Make the essential styles sass as well.

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
         <meta name='viewport' content='width=device-width, initial-scale=1'>
 
         <!-- Essential for the user to see at least a loading screen -->
-        <link rel='stylesheet' href='style.css'>
+        <link rel='stylesheet' href='dist/style.css'>
 
         <!-- Big stylesheet with all other styles -->
         <link rel='stylesheet' href='dist/styles.css'>
