Load material theme.

--- a/src/index.html
+++ b/src/index.html
@@ -71,7 +71,8 @@
             </div>
         </app>
 
-        <!-- Big stylesheet with all other styles -->
+        <!-- Big stylesheets with all other styles -->
+        <link rel='stylesheet' href='dist/theme.css'>
         <link rel='stylesheet' href='dist/styles.css'>
 
         <!-- Polyfill(s) for older browsers -->
