Load material icons.

--- a/src/index.html
+++ b/src/index.html
@@ -72,6 +72,9 @@
         </app>
 
         <!-- Big stylesheets with all other styles -->
+        <link
+                rel='stylesheet'
+                href='https://fonts.googleapis.com/icon?family=Material+Icons'>
         <link rel='stylesheet' href='dist/theme.css'>
         <link rel='stylesheet' href='dist/styles.css'>
 
