--- a/src/index.html
+++ b/src/index.html
@@ -75,6 +75,9 @@
         <link
                 rel='stylesheet'
                 href='https://fonts.googleapis.com/icon?family=Material+Icons'>
+        <link
+                rel='stylesheet'
+                href='https://fonts.googleapis.com/css?family=Roboto:300,400,500'>
         <link rel='stylesheet' href='dist/theme.css'>
         <link rel='stylesheet' href='dist/styles.css'>
 
