--- a/src/index.html
+++ b/src/index.html
@@ -74,10 +74,10 @@
         <!-- Big stylesheets with all other styles -->
         <link
                 rel='stylesheet'
-                href='https://fonts.googleapis.com/icon?family=Material+Icons'>
+                href='//fonts.googleapis.com/icon?family=Material+Icons'>
         <link
                 rel='stylesheet'
-                href='https://fonts.googleapis.com/css?family=Roboto:300,400,500'>
+                href='//fonts.googleapis.com/css?family=Roboto:300,400,500'>
         <link rel='stylesheet' href='dist/theme.css'>
         <link rel='stylesheet' href='dist/styles.css'>
 
