Enable material typography.

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
         <!-- Essential for the user to see at least a loading screen -->
         <link rel='stylesheet' href='dist/style.css'>
     </head>
-    <body>
+    <body class='mat-typography'>
         <div id="preloader"></div>
         <app>
             <div id='preload_spinner' class='hidden spinner'></div>
