--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,9 @@
         <title>Aldo</title>
         <base href='/'>
         <meta charset='UTF-8'>
-        <meta name='viewport' content='width=device-width, initial-scale=1'>
+        <meta
+                name='viewport'
+                content='width=360, initial-scale=1, minimum-scale=1, maximum-scale=1'>
 
         <!-- Essential for the user to see at least a loading screen -->
         <link rel='stylesheet' href='dist/style.css'>
