Add an icon to the preload retry button.

--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,10 @@
                         <ul id='denied_permissions'></ul>
                     </div>
                     <div>
-                        <button id='retry_auth_btn'>Erneut versuchen</button>
+                        <button id='retry_auth_btn'>
+                            Erneut versuchen
+                            <i class='material-icons'>refresh</i>
+                        </button>
                     </div>
                     <hr>
                     <div>
