--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Aldo</title>
         <base href='/'>
+        <link rel='icon' type='image/x-icon' href='favicon.ico?v=2'>
         <meta charset='UTF-8'>
         <meta
                 name='viewport'
