--- a/src/index.html
+++ b/src/index.html
@@ -256,8 +256,8 @@
     <link
             rel='stylesheet'
             href='//fonts.googleapis.com/css?family=Roboto:300,400,500,700'>
-    <link rel='stylesheet' href='dist/theme.css'>
-    <link rel='stylesheet' href='dist/styles.css'>
+    <link rel='stylesheet' href='app/theme.css'>
+    <link rel='stylesheet' href='app/styles.css'>
 
     <!-- Polyfill(s) for older browsers -->
     <script src='node_modules/core-js/client/shim.min.js'></script>
