--- a/src/index.html
+++ b/src/index.html
@@ -256,6 +256,9 @@
     <link
             rel='stylesheet'
             href='//fonts.googleapis.com/css?family=Roboto:300,400,500,700'>
+    <link
+            rel='stylesheet'
+            href='node_modules/@covalent/core/common/platform.css'>
     <link rel='stylesheet' href='app/theme.css'>
     <link rel='stylesheet' href='app/styles.css'>
 
