--- a/src/index.html
+++ b/src/index.html
@@ -273,5 +273,8 @@
     <!-- Configuration and bootstrap. -->
     <script src='aldo.conf.js'></script>
     <script src='script.js'></script>
+
+    <!-- Facebook SDK for JavaScript. -->
+    <div id='fb-root'></div>
 </html>
 
