Adjust the resolutions to allow for medium-sized phones.

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,11 @@
         <meta charset='UTF-8'>
         <meta
                 name='viewport'
-                content='width=360, initial-scale=1, minimum-scale=1, maximum-scale=1'>
+                content='
+                    width=320,
+                    initial-scale=1,
+                    minimum-scale=1,
+                    maximum-scale=1'>
 
         <!-- Essential for the user to see at least a loading screen -->
         <style>
@@ -17,7 +21,7 @@
                 position: fixed;
                 top: 0;
                 left: 0;
-                z-index: 65530;	
+                z-index: 65530;
                 margin-left: 0;
                 background-color: #3f51b5;
             }
@@ -217,7 +221,7 @@
                             Der Bildschirm von deinem Gerät ist leider zu klein, 
                             um die Webapp zu benutzen.  Wir arbeiten an einer App 
                             für Android und iOS, bis dahin funktioniert Aldo 
-                            leider nur auf Tablets und sehr großen Smartphones.
+                            leider nur auf Tablets und großen Smartphones.
                         </p>
                     </div>
                     <hr>
